--- a/style.css
+++ b/style.css
@@ -236,6 +236,10 @@ nav li a:hover {
 		color: black;
 	}
 }
+.advantages {
+	height: 80vh;
+	position: relative;
+}
 .advantages__title {
 	background-image: url(img/advantages2.png);
 	background-repeat: no-repeat;
@@ -243,51 +247,182 @@ nav li a:hover {
 	text-align: center;
 	padding: 10px;
 }
-.advantages__item {
-	background-color: #FFAC42;
-}
-.advantages__item:nth-child(odd) {
-	background-color: #4CAF52;
-}
-@media (min-width: 1200px) {
+
+	.advantages__item {
+		background-color: #FFAC42;
+	}
+	.advantages__item:nth-child(odd) {
+		background-color: #4CAF52;
+	}
+@media (min-width: 768px) {
 	 .advantages {
 	 	position: relative;
-	 }
- 
+	 } 
 	.advantages .advantages__item {
 		display: block;	
-		background-color: transparent;	
-		background-image: url(img/advantages.png);
-		background-repeat: no-repeat;
-		background-size: cover;		
+		background-color: rgba(255, 255, 255, 0.1);		
 		width: 34%;
 		padding: 16vh 0; 
 		position: absolute;
 		font-size: 31px;
+		z-index: 0;
 	}
 	.advantages__item_1 {
 		position: absolute;		
-		left: 0%;
+		left: 10%;
+		top: 5vh;
+		z-index: 0;
 	}
 	.advantages__item_2 {
 		position: absolute;		
-		right: 0%;
+		right: 10%;
+		top: 5vh;
 	}	
 	.advantages__item_3 {
 		position: absolute;		
-		left: 0;
-		top: 55vh;
+		left: 10%;
+		top: 45vh;
 	}	
 	.advantages__item_4 {
 		position: absolute;		
-		right: 0;
-		top: 55vh;
+		right: 10%;
+		top: 45vh;
 	}	
 	.advantages__item_5 {
 		position: absolute;		
-		right: 28%;
-		top: 20vh;
+		right: 32%;
+		top: 22vh;
 		width: 44%;
 		padding: 25vh 0;
+		font-weight: bold;
 	}	
+}
+@media (min-width: 768px) {
+	.romb1 {
+		position: absolute;
+		z-index: 100;
+		top: 20vh;
+		left: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 15vh;
+		transform: rotate(45deg);
+	}
+	.romb2 {
+		position: absolute;
+		top: 20vh;
+		right: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 15vh;
+		transform: rotate(45deg);
+	}
+	.romb3 {
+		position: absolute;
+		top: 60vh;
+		left: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 15vh;
+		transform: rotate(45deg);
+	}
+	.romb4 {
+		position: absolute;
+		top: 60vh;
+		right: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 15vh;
+		transform: rotate(45deg);
+	}
+	.romb5 {
+		position: absolute;
+		top: 35vh;
+		left: 38%;
+		border: 2px solid #FFAC42;
+		width: 30%;
+		height: 25vh;
+		transform: rotate(45deg);
+	}
+	.line1 {
+		border: 4px solid #4CAF52;
+		width: 300px;
+		transform: rotate(-45deg);
+		position: absolute;
+		top: 30vh;
+		left: 30%;
+		z-index: 0;
+	}
+	.line2 {
+		border: 4px solid #4CAF52;
+		width: 300px;
+		transform: rotate(-45deg);
+		position: absolute;
+		top: 70vh;
+		right: 30%;
+		z-index: 0;
+	}
+}
+@media (min-width: 1200px) {
+	.romb1 {
+		position: absolute;
+		top: 20vh;
+		left: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 20vh;
+		transform: rotate(45deg);
+	}
+	.romb2 {
+		position: absolute;
+		top: 20vh;
+		right: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 20vh;
+		transform: rotate(45deg);
+	}
+	.romb3 {
+		position: absolute;
+		top: 60vh;
+		left: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 20vh;
+		transform: rotate(45deg);
+	}
+	.romb4 {
+		position: absolute;
+		top: 60vh;
+		right: 20%;
+		border: 2px solid #FFAC42;
+		width: 17%;
+		height: 20vh;
+		transform: rotate(45deg);
+	}
+	.romb5 {
+		position: absolute;
+		top: 35vh;
+		left: 38%;
+		border: 2px solid #FFAC42;
+		width: 25%;
+		height: 30vh;
+		transform: rotate(45deg);
+	}
+	.line1 {
+		border:4px solid #4CAF52;
+		width: 300px;
+		transform: rotate(-45deg);
+		position: absolute;
+		top: 30vh;
+		left: 32%;
+	}
+	.line2 {
+		border:4px solid #4CAF52;
+		width: 300px;
+		transform: rotate(-45deg);
+		position: absolute;
+		top: 69vh;
+		right: 31%;
+	}
 }
